wii: Build in -O2

--- a/makefiles/Wii.cfg
+++ b/makefiles/Wii.cfg
@@ -9,7 +9,7 @@ include $(DEVKITPPC)/wii_rules
 PKGCONFIG =	$(DEVKITPRO)/portlibs/ppc/bin/powerpc-eabi-pkg-config
 STRIP =	$(DEVKITPRO)/devkitPPC/bin/powerpc-eabi-strip
 
-ARCH := $(MACHDEP)
+ARCH := $(MACHDEP) -O2
 
 CFLAGS += $(ARCH)
 CXXFLAGS += $(ARCH)
