wii: Init FAT for SD card reading

--- a/makefiles/Wii.cfg
+++ b/makefiles/Wii.cfg
@@ -13,9 +13,9 @@ ARCH := $(MACHDEP)
 
 CFLAGS += $(ARCH)
 CXXFLAGS += $(ARCH)
-# DEFINES +=
+DEFINES += -DRETRO_USE_MOD_LOADER=0
 LDFLAGS += -g $(ARCH) -Wl,-Map,$(notdir $*.map) -L$(LIBOGC_LIB)
-RSDK_LIBS += -lwiiuse -lbte -logc -lm
+RSDK_LIBS += -ldb -lwiiuse -lbte -lfat -logc -lm
 RSDK_INCLUDES += -I$(LIBOGC_INC)
 
 GAME_FLAGS += -DGAME_MAIN=main
