--- a/makefiles/Wii.cfg
+++ b/makefiles/Wii.cfg
@@ -15,7 +15,7 @@ CFLAGS += $(ARCH)
 CXXFLAGS += $(ARCH)
 DEFINES += -DRETRO_USE_MOD_LOADER=0
 LDFLAGS += -g $(ARCH) -Wl,-Map,$(notdir $*.map) -L$(LIBOGC_LIB)
-RSDK_LIBS += -ldb -lwiiuse -lbte -lfat -logc -lm
+RSDK_LIBS += -ldb -lwiiuse -lbte -lfat -laesnd -logc -lm
 RSDK_INCLUDES += -I$(LIBOGC_INC)
 
 GAME_FLAGS += -DGAME_MAIN=main
