wii: Disable log by default
This should slightly improve loading times and remove stutters when defeating badniks.

--- a/makefiles/Wii.cfg
+++ b/makefiles/Wii.cfg
@@ -13,7 +13,7 @@ ARCH := $(MACHDEP) -O2
 
 CFLAGS += $(ARCH)
 CXXFLAGS += $(ARCH)
-DEFINES += -DRETRO_USE_MOD_LOADER=0
+DEFINES += -DRETRO_USE_MOD_LOADER=0 -DRETRO_DISABLE_LOG
 LDFLAGS += -g $(ARCH) -Wl,-Map,$(notdir $*.map) -L$(LIBOGC_LIB)
 RSDK_LIBS += -ldb -lwiiuse -lbte -lfat -laesnd -logc -lm
 RSDK_INCLUDES += -I$(LIBOGC_INC)
