wii: Hardcode absolute directory path
The game now looks for files in a `RSDKv5` folder at the root
of the SD card. This will prevent issues with forwarders and
other homebrews that don't change directories before loading
the executable file.

--- a/makefiles/Wii.cfg
+++ b/makefiles/Wii.cfg
@@ -1,6 +1,9 @@
 STATIC = 1
 STATICGAME = 1
 
+# Path where data will be stored/read from
+BASE_PATH=/RSDKv5/
+
 ifeq ($(RSDK_ONLY),1)
 $(error RSDK_ONLY must not be defined for Wii builds)
 endif
