--- a/makefiles/Wii.cfg
+++ b/makefiles/Wii.cfg
@@ -1,8 +1,14 @@
 STATIC = 1
 STATICGAME = 1
 
+OS=Windows_NT
 # Path where data will be stored/read from
-BASE_PATH=/RSDKv5/
+# Hacky workaround to fix MinGW/MSYS2 from modifying this path
+ifeq ($(OS),Windows_NT)
+	BASE_PATH=//RSDKv5/
+else
+	BASE_PATH=/RSDKv5/
+endif
 
 ifeq ($(RSDK_ONLY),1)
 $(error RSDK_ONLY must not be defined for Wii builds)
