wii: Fix MinGW/MSYS2 path issues
These toolchains have a tendency to modify every absolute path.
This makes it so that the BASE_PATH doesn't get translated to a
Windows `C:/msys2` style path, which rendered the game unable to
read the data files.

--- a/makefiles/Wii.cfg
+++ b/makefiles/Wii.cfg
@@ -2,7 +2,12 @@ STATIC = 1
 STATICGAME = 1
 
 # Path where data will be stored/read from
-BASE_PATH=/RSDKv5/
+# Hacky workaround to fix MinGW/MSYS2 from modifying this path
+ifeq ($(OS),Windows_NT)
+	BASE_PATH=//RSDKv5/
+else
+	BASE_PATH=/RSDKv5/
+endif
 
 ifeq ($(RSDK_ONLY),1)
 $(error RSDK_ONLY must not be defined for Wii builds)
