--- a/makefiles/Wii.cfg
+++ b/makefiles/Wii.cfg
@@ -17,12 +17,16 @@ include $(DEVKITPPC)/wii_rules
 PKGCONFIG =	$(DEVKITPRO)/portlibs/ppc/bin/powerpc-eabi-pkg-config
 STRIP =	$(DEVKITPRO)/devkitPPC/bin/powerpc-eabi-strip
 
-ARCH := $(MACHDEP) -O2
+ARCH := $(MACHDEP) -Os
+
+# Strip a lot of stuff
+ARCH += -fomit-frame-pointer -ffunction-sections -fdata-sections -fno-asynchronous-unwind-tables -fmerge-all-constants
+LDFLAGS += -Wl,-gc-sections -Wl,--strip-all -Wl,--orphan-handling=discard
 
 CFLAGS += $(ARCH)
-CXXFLAGS += $(ARCH)
-DEFINES += -DRETRO_USE_MOD_LOADER=0 -DRETRO_DISABLE_LOG
-LDFLAGS += -g $(ARCH) -Wl,-Map,$(notdir $*.map) -L$(LIBOGC_LIB)
+CXXFLAGS += $(ARCH) -fno-rtti -fno-threadsafe-statics
+DEFINES += -DRETRO_DISABLE_LOG -DRETRO_INCLUDE_EDITOR=0
+LDFLAGS += $(ARCH) -Wl,-Map,$(notdir $*.map) -L$(LIBOGC_LIB)
 RSDK_LIBS += -lwiiuse -lbte -lfat -laesnd -logc -lm
 RSDK_INCLUDES += -I$(LIBOGC_INC)
 
